----------------------------------
SimpleMail Open Source - ChangeLog
----------------------------------

2007-02-06  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: The bold-style must also be used in the CalcEntry().
	  Added safety check for mail pointer (mail_info could be NULL).

2007-02-05  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Fixed a calculation bug in the memmove() call.
	  The bug could only happen when the mails are not selected continued (eg, 1-3, 5, 9)
	  which is now possible with the key-control. Also the active mail must not be part
	  of the selection anymore.

2007-02-05  Release Version 0.31

2007-02-04  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/searchwnd.c: The MailTreelist is now build with the correct function
	  (it now has scrollbars if necessary).
	* amiga-mui/mailtreelistclass-new.c: Added two missing recalcs of the horizontal
	  scrollbar.
	* folder.c: Replaced the linear search with a binary search.

2007-02-03  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/filterruleclass.c, amiga-mui/filterwnd.c, amiga-mui/support.c,
	  filter.(c|h), folder.c, indep-include/support.h, doc/amiga/SimpleMail.guide:
	  Added three new options for the filterrules: "Substring", "Case sensitive"
	  and "Pattern". The last option is especially for Chris Handley (fixes
	  bug #1425069).
	  The pattern in the search window will be interpreted with "Substring" and
	  "Pattern" set (not yet configurable).
	* amiga-mui/mailtreelistclass-new.c: Reworked the support for the NewMouse standard.
	  Now the mousewheel will scroll only by one line and faster while one of the SHIFT-keys
	  will be held down. Horizontal scrolling is now also supported with the second wheel
	  or with the first wheel and holding down one of the ALT-keys.

2007-02-02  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Added a SORT[12]MASK for the column flags.